--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -52,7 +52,7 @@ ion-searchbar {
 
 ion-content {
   --background: var(--background);
-  padding-bottom: 240px;
+  margin-bottom: 240px;
   
   .modern-grid {
     padding: var(--spacing-md);
